# Smart-PrtScr

./: .gitignore  CLAUDE.md  PRIVACY.md  README.md  build-msix.js  build-msix.ps1  filename-dialog.html  index.html  main.js  package-lock.json  package.json  publish-store.ps1  selection.html  start.bat  store-metadata.json  wdk.vsconfig
.claude/: settings.local.json
scripts/: record-demo.bat  record-demo.ps1
specs/001-copy-capture-clipboard/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-copy-capture-clipboard/checklists/: requirements.md
specs/001-modify-rectangle-selection/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-modify-rectangle-selection/checklists/: requirements.md
specs/002-win10-startup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-win10-startup/checklists/: requirements.md
specs/002-win10-startup/contracts/: README.md
specs/1-timestamp-overlay/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-timestamp-overlay/checklists/: requirements.md
src/: filename-dialog.html  index.html  selection.html
src-tauri/: AppxManifest.xml  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: autostart.rs  lib.rs
